--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "@reach/visually-hidden": "^0.16.0",
     "@supabase/supabase-js": "^1.31.1",
-    "@tensorflow-models/posenet": "^2.2.2",
-    "@tensorflow/tfjs": "^3.14.0",
+    "@teachablemachine/pose": "^0.8.6",
+    "@tensorflow/tfjs": "^1.3.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "ml5": "^0.10.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
