--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "@reach/visually-hidden": "^0.16.0",
     "@supabase/supabase-js": "^1.31.1",
     "@teachablemachine/pose": "^0.8.6",
