added npm module for seedrandom

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "seedrandom": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
